--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
- 
-    <link rel="shortcut icon" type="image/png" href="img/logo.png" />
 
   <meta name="description" content="Lazy loading the images on your websites is a good idea in 99% of the cases. As all the other lazy load libraries where way to heavy for use case I build lazy-simon.js.As it is only 350 byte in total size, I now can include it on every website I develop without having to worry about performance impacts. Only upsides here 🤩" />
   <meta name="robots" content="index, follow" />
@@ -44,7 +42,8 @@
    <h3>Inline</h3>
    <p>Add the lazy-simon.js inline in your html at the bottom of your body</p>
 
-<pre ><span style="color:#9999a9; ">/*</span>
+
+<pre><span style="color:#9999a9; ">/*</span>
 <span style="color:#9999a9; ">* lazy-simon.js</span>
 <span style="color:#9999a9; ">*</span>
 <span style="color:#9999a9; ">*  Minimal effort 350 byte JavaScript library to lazy load all &lt;img&gt; on your website</span>
@@ -62,14 +61,17 @@ o <span style="color:#d2cd86; ">=</span> <span style="color:#e66170; font-weight
 d <span style="color:#d2cd86; ">=</span> document<span style="color:#d2cd86; ">.</span>querySelectorAll<span style="color:#d2cd86; ">(</span><span style="color:#02d045; ">"</span><span style="color:#00c4c4; ">img</span><span style="color:#02d045; ">"</span><span style="color:#d2cd86; ">)</span><span style="color:#b060b0; ">;</span>
 <span style="color:#e66170; font-weight:bold; ">for</span> <span style="color:#d2cd86; ">(</span>i <span style="color:#d2cd86; ">=</span> d<span style="color:#d2cd86; ">.</span><span style="color:#e66170; font-weight:bold; ">length</span> <span style="color:#d2cd86; ">-</span> <span style="color:#008c00; ">1</span><span style="color:#b060b0; ">;</span> i <span style="color:#d2cd86; ">&gt;=</span> <span style="color:#008c00; ">0</span><span style="color:#b060b0; ">;</span> i<span style="color:#d2cd86; ">--</span><span style="color:#d2cd86; ">)</span> <span style="color:#b060b0; ">{</span>
   e <span style="color:#d2cd86; ">=</span> d<span style="color:#d2cd86; ">[</span>i<span style="color:#d2cd86; ">]</span><span style="color:#b060b0; ">;</span>
+  <span style="color:#e66170; font-weight:bold; ">if</span> <span style="color:#d2cd86; ">(</span>e<span style="color:#d2cd86; ">.</span>loading <span style="color:#d2cd86; ">!=</span> <span style="color:#0f4d75; ">undefined</span><span style="color:#d2cd86; ">)</span><span style="color:#b060b0; ">{</span>
+    e<span style="color:#d2cd86; ">.</span>loading <span style="color:#d2cd86; ">=</span> <span style="color:#02d045; ">"</span><span style="color:#00c4c4; ">lazy</span><span style="color:#02d045; ">"</span>
+  <span style="color:#b060b0; ">}</span><span style="color:#e66170; font-weight:bold; ">else</span><span style="color:#b060b0; ">{</span>
   e<span style="color:#d2cd86; ">.</span>dataset<span style="color:#d2cd86; ">.</span>l <span style="color:#d2cd86; ">=</span> e<span style="color:#d2cd86; ">.</span>src<span style="color:#b060b0; ">;</span>
   e<span style="color:#d2cd86; ">.</span>src <span style="color:#d2cd86; ">=</span>
     <span style="color:#02d045; ">"</span><span style="color:#00c4c4; ">data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mN89xQAAscB1RY/sEQAAAAASUVORK5CYII=</span><span style="color:#02d045; ">"</span><span style="color:#b060b0; ">;</span>
   o<span style="color:#d2cd86; ">.</span>observe<span style="color:#d2cd86; ">(</span>e<span style="color:#d2cd86; ">)</span><span style="color:#b060b0; ">;</span>
+  <span style="color:#b060b0; ">}</span>
 <span style="color:#b060b0; ">}</span>
 </pre>
 
-   
 <h2>Test area</h2>
 <p>Scroll down to see lazy-simon.js in action.</p>
 
@@ -160,16 +162,5 @@ d <span style="color:#d2cd86; ">=</span> document<span style="color:#d2cd86; ">.
 </div>
   
 </body>
-
-<?php
-if(isset($_GET["beta"])){
-?>
-    <script src="js/lazy_simon_beta.js"></script>
-<?php
-}else{
-?>
-    <script src="js/lazy_simon.js"></script>
-<?php
-}
-?>
+<script src="js/lazy_simon.js"></script>
 </html>
