Document script change

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <p>Minimal effort 350 byte JavaScript library to lazy load all &lt;img&gt; on your website</p>
    <p>Lazy loading the images on your websites is a good idea in 99% of the cases. As all the other lazy load libraries where way to heavy for use case I build lazy-simon.js.</p>
    <p>As it is <b>only 350 byte in total size</b>, I now can include it on every website I develop without having to worry about performance impacts. Only upsides here 🤩</p>
-   <p>The script uses a <i>Intersection Observer</i> for the getting the elements that are currently viewed. To check what browser all support this feature checkout <a href="https://caniuse.com/#search=intersectionobserver">https://caniuse.com/#search=intersectionobserver</a></p>
+   <p>The script uses a <i>Intersection Observer</i> for the getting the elements that are currently viewed. To check what browser all support this feature checkout <a href="https://caniuse.com/#search=intersectionobserver">https://caniuse.com/#search=intersectionobserver</a>. If possible it uses the native lazy loading supported by modern browsers <a href="https://caniuse.com/#feat=loading-lazy-attr">https://caniuse.com/#feat=loading-lazy-attr</a></p>
     <p>You can find the code in the <a href="https://github.com/simonfrey/lazysimon">Github repo</a> and the script is licensed <a href="https://github.com/simonfrey/lazysimon/blob/master/LICENSE">MIT</a></p>
 
  <h2>Usage</h2>
