Use transparent svg instead of base64 png

--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
    <h3>Inline</h3>
    <p>Add the lazy-simon.js inline in your html at the bottom of your body</p>
 
-
 <pre><span style="color:#9999a9; ">/*</span>
 <span style="color:#9999a9; ">* lazy-simon.js</span>
 <span style="color:#9999a9; ">*</span>
@@ -65,12 +64,12 @@ d <span style="color:#d2cd86; ">=</span> document<span style="color:#d2cd86; ">.
     e<span style="color:#d2cd86; ">.</span>loading <span style="color:#d2cd86; ">=</span> <span style="color:#02d045; ">"</span><span style="color:#00c4c4; ">lazy</span><span style="color:#02d045; ">"</span>
   <span style="color:#b060b0; ">}</span><span style="color:#e66170; font-weight:bold; ">else</span><span style="color:#b060b0; ">{</span>
   e<span style="color:#d2cd86; ">.</span>dataset<span style="color:#d2cd86; ">.</span>l <span style="color:#d2cd86; ">=</span> e<span style="color:#d2cd86; ">.</span>src<span style="color:#b060b0; ">;</span>
-  e<span style="color:#d2cd86; ">.</span>src <span style="color:#d2cd86; ">=</span>
-    <span style="color:#02d045; ">"</span><span style="color:#00c4c4; ">data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mN89xQAAscB1RY/sEQAAAAASUVORK5CYII=</span><span style="color:#02d045; ">"</span><span style="color:#b060b0; ">;</span>
+  e<span style="color:#d2cd86; ">.</span>src <span style="color:#d2cd86; ">=</span> <span style="color:#02d045; ">"</span><span style="color:#00c4c4; ">data:image/svg+xml,&lt;svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1 1' /&gt;</span><span style="color:#02d045; ">"</span><span style="color:#b060b0; ">;</span>
   o<span style="color:#d2cd86; ">.</span>observe<span style="color:#d2cd86; ">(</span>e<span style="color:#d2cd86; ">)</span><span style="color:#b060b0; ">;</span>
   <span style="color:#b060b0; ">}</span>
 <span style="color:#b060b0; ">}</span>
 </pre>
+
 
 <h2>Test area</h2>
 <p>Scroll down to see lazy-simon.js in action.</p>
